@@ -1,15 +1,23 @@
 This is just to motivate myself to improve a little bit every day :)
 
-Best: 14
+Best: 15
+
+07-04-2024
+Streak: 15
+Learned:
+Did:
+    -Split colours from theme into separate file + function
+    -Make colours providable to other composables in the tree using CompositionLocalProvider
 
 06-04-2024
 Streak: 14
 Learned:
+    -Read about using CompositionLocal (again) - this time in the context of passing theme colours.
 Did:
     -Update notes on how to improve adaptive ui - for future reference, don't want to work on it
         anymore right now.
     -Refactor MainMenu Button to a more generic & reusable ImageButton
-    -Move new ImageButton composable to reusableUi directory
+    -Move new ImageButton composable to reusableUi directory (separate commit so history is preserved)
 
 05-04-2024
 Streak: 13
